Fix: table overflow issue by adding horizontal scroll

--- a/header.css
+++ b/header.css
@@ -34,11 +34,13 @@
 }
 
 .income-expense-grid{
-  flex-basis: 100%;
   display: grid;
+  flex: 0 0 100%;
   grid-template-columns: 1fr 1fr;
-  gap: 20px; 
-  margin: 30px 0px;
+  place-items: center;
+  gap: 50px; 
+  margin-top: 50px;
+  margin-bottom: 40px;
 }
 
 .income-style, .expense-style{
